--- a/css/estilo.css
+++ b/css/estilo.css
@@ -362,6 +362,9 @@ section.brn{
     color: #ffffff;
     line-height: 1.5;        
 }
+.bluebox.large{
+    max-width: 540px;
+}
 .bluebox.home {
     background-color:#253150e0;    
     width: auto;
@@ -1971,6 +1974,9 @@ h2.beneficios::after{
 }
 .aviso ul a{
     font-size: 1rem;
+}
+.aviso > a{
+    font-family: 'RobotoBold';
 }
 .fecha {
 	font-family: 'RobotoRegular';
@@ -3943,7 +3949,8 @@ footer .lineav{
         width: 90%;
         margin: auto;
     }
-    .bluebox{
+    .bluebox,
+    .bluebox.large{
         top: 60%;
         left: 50%;
         transform: translate(-50%, 0);
@@ -4369,7 +4376,8 @@ footer .lineav{
     #mySearch-results {
         width: 100%;
     }
-    .bluebox {
+    .bluebox,
+    .bluebox.large {
         width: max-content;        
     }
     .bluebox h2 {
@@ -4377,7 +4385,7 @@ footer .lineav{
         text-align: center;
         max-width: 100%;
         width: 100%;
-    }    
+    }        
     .faq {
         max-width: 100%;
         margin-left: auto;
